# cargo-fmt-toml

./: CLAUDE.md  Cargo.toml  DEPENDABOT_ROLLOUT_SUMMARY.md  README.md  REUSABLE_ACTIONS_SUMMARY.md  build.rs  cog.toml
.cargo-husky/hooks/: commit-msg
.claude/skills/commit/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/: DEPENDABOT_AUTOMATION.md  MAINTAINERS.md  PUBLISH.md  SETUP_CHECKLIST.md
.github/workflows/: auto-version-bump.yml  ci.yml
src/: main.rs
