[package]
name = "cargo-fmt-toml"
description = "Cargo subcommand to format and normalize Cargo.toml files according to workspace standards"
version = "0.0.4"
edition = "2024"
license-file = "LICENSE"
keywords = ["cargo", "toml", "format", "cli", "workspace"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Jacobus Geluk <jacobus@dataroad.com>"]
repository = "https://github.com/dataroadinc/cargo-fmt-toml"
documentation = "https://docs.rs/cargo-fmt-toml"
homepage = "https://github.com/dataroadinc/cargo-fmt-toml"
rust-version = "1.92.0"
publish = true

exclude = [
    ".cargo/",
    ".cargo-husky/",
    ".clippy.toml",
    ".cursor/",
    ".github/",
    ".gitignore",
    ".rust-toolchain.toml",
    ".vscode/",
    "cog.toml",
    "rustfmt.toml",
]

[[bin]]
name = "cargo-fmt-toml"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", default-features = false, features = [
    "derive",
    "env",
    "std",
] }
serde = { version = "1", features = ["derive"] }
taplo = "0.14.0"
toml = "0.9.8"
toml_edit = "0.24.0"
cargo-plugin-utils = "0.0.3"

[build-dependencies]
cargo-version-info = { version = "0.0.7", default-features = false }
sloughi = "0.3"

[dev-dependencies]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
